Fixed overflow scroll

--- a/components/user/screen.css
+++ b/components/user/screen.css
@@ -2,7 +2,7 @@
     margin: 10px 0 5px 0;
     border-radius: 5px;
     box-shadow: inset 0px 0px 5px 0px rgba(0, 0, 0, .5);
-    overflow: auto; 
+    overflow: scroll; 
 }
 
 #project_selector table td { border: none; border-bottom: 1px solid #666; }
